<resources>
    <string name="app_name">ActivtyIntent</string>
    <string name="text_with_color">By checking the box you agree to our <font color="#0000FF">terms</font> and <font color="#0000FF">conditions</font></string>
    <string name="loginbro">Already Have An Account? <font color="#0000FF">Log in</font></string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forget"><font color="#0000FF">Forget Password ?</font></string>
    <string name="newmember">New Member? <font color="#0000FF">Register</font></string>
</resources>