<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:textSize="34sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/txt_name"
        android:inputType="text"
        android:hint="Username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_name"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="Password"/>


    <CheckBox
        android:id="@+id/chekbok"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="Remember Me"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:text="@string/forget"
        android:layout_below="@+id/password"
        />

    <Button
        android:id="@+id/btn_to_third_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/chekbok"
        android:text="Login"
        android:backgroundTint="@color/blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_to_third_activity"
        android:text="@string/newmember"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

</RelativeLayout>