<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:textSize="23dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/regis"
        android:hint="Masukan Nama"
        android:inputType="text"
        android:padding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/edt_name"
        android:hint="Masukan Email"
        android:inputType="text"
        android:padding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/edt_email"
        android:hint="Masukan Phone"
        android:inputType="number"
        android:padding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/edt_phone"
        android:hint="Masukan Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:minHeight="48dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password"/>

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:textSize="13sp"
        android:layout_below="@+id/edt_password"
        android:text="@string/text_with_color"/>

    <Button
        android:id="@+id/btn_to_second_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/terms"
        android:text="Register"
        android:backgroundTint="@color/blue"/>

    <TextView
        android:id="@+id/akun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_to_second_activity"
        android:text="@string/loginbro"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

</RelativeLayout>